--- a/index.html
+++ b/index.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-				<meta charset="UTF-8">
-				<meta name="viewport" content="width=device-width, initial-scale=1.0">
-				<title>Intelage Calculator</title>
-			 <link rel="stylesheet" href="style.css"></link>
-</head>
-<body>
-				<h1>Intelage Calculator</h1>
-				<p class="comingsoon">Coming Soon!</p>
-				<p class="description">I'm currently learning HTML and yet to start learning JavaScript. So once I've learned enough of JS to complete this, I'll complete this project! <em>pinky promise ;)</em></p>
-				<div class="proinfo">
-				<strong><em>What does the name mean?</em></strong><br><br>
-								 The part <strong>Intel</strong> came from the word <em>Intelligent</em> and well the part <strong>age</strong> means <em>Age</em>. Yeah I know it sounds dumb! Or maybe it <strong>doesn't!?</strong> And I guess you probably know what a <strong>Calculator</strong> means.<br><br>
-								 <strong><em>So a calculator! What's New about it?</em></strong><br><br>
-								 Well it's not your normal calculator that you daily use for doing maths and calculations. It's a <strong>Special</strong> Calculator for calculating stuffs related to your <em>age</em> as the name suggests.<br><br>
-								 <strong>It'll be able to :</strong>
-								 <ul>
-								 				<li>Tell your exact age based on your input</li>
-								 				<li>Your next birthdate with countdowns</li>
-								 				<li>How many hours you've slept</li>
-								 				<li>How many hours you'll probably sleep</li>
-								 				<li>How many breaths you've taken around</li>
-								 				<li>How much foods you've taken around</li>
-								 				<li>How many times your heart has beaten around <em>and other sorts of fun stuffs ;)</em></li>
-								 </ul>
-								 <p style="text-align: center; color: red; font-size: 20px;"><strong>So Stay Tuned Everyone! Bye Bye</strong></p>
-				</div>
-				<footer>
-								<h3>:: Contacts ::</h>
-								<br>
-								<a href="https://www.facebook.com/username2249">
-							 <img class="contacts" src="https://img.icons8.com/doodle/48/000000/facebook-new.png"></a>
-							 <a href="mailto: zakariyaabbas2015@gmail.com">
-								<img class="contacts" src="https://img.icons8.com/doodle/48/000000/gmail-new.png"></a>
-								<p class="credit">Developed with ♥️ by Xeunyx</p>
-				</footer>
-</body>
-</html> 
- 
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Intelage Calculator</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <h1>Intelage Calculator</h1>
+        <p class="comingsoon">Coming Soon!</p>
+        <p class="description">I'm currently learning HTML and yet to start learning JavaScript. So once I've learned enough of JS to complete this, I'll complete this project! <em>pinky promise ;)</em></p>
+        <div class="proinfo">
+            <strong><em>What does the name mean?</em></strong><br />
+            <br />
+            The part <strong>Intel</strong> came from the word <em>Intelligent</em> and well the part <strong>age</strong> means <em>Age</em>. Yeah I know it sounds dumb! Or maybe it <strong>doesn't!?</strong> And I guess you probably know
+            what a <strong>Calculator</strong> means.<br />
+            <br />
+            <strong><em>So a calculator! What's New about it?</em></strong><br />
+            <br />
+            Well it's not your normal calculator that you daily use for doing maths and calculations. It's a <strong>Special</strong> Calculator for calculating stuffs related to your <em>age</em> as the name suggests.<br />
+            <br />
+            <strong>It'll be able to :</strong>
+            <ul>
+                <li>Tell your exact age based on your input</li>
+                <li>Your next birthdate with countdowns</li>
+                <li>How many hours you've slept</li>
+                <li>How many hours you'll probably sleep</li>
+                <li>How many breaths you've taken around</li>
+                <li>How much foods you've taken around</li>
+                <li>How many times your heart has beaten around <em>and other sorts of fun stuffs ;)</em></li>
+            </ul>
+            <p style="text-align: center; color: red; font-size: 18px;"><strong>So Stay Tuned Everyone! Bye Bye</strong></p>
+        </div>
+        <footer>
+            <h3>:: Contacts ::</h3>
+            <br />
+            <a href="https://www.facebook.com/username2249"> <img class="contacts" src="https://img.icons8.com/doodle/48/000000/facebook-new.png" /></a>
+
+            <a href="mailto: zakariyaabbas2015@gmail.com"> <img class="contacts" src="https://img.icons8.com/doodle/48/000000/gmail-new.png" /></a>
+
+            <p class="credit">Developed with ♥️ by Xeunyx</p>
+        </footer>
+    </body>
+</html>
