--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li>How many hours you'll probably sleep</li>
                 <li>How many breaths you've taken around</li>
                 <li>How much foods you've taken around</li>
-                <li>How many times your heart has beaten around <em>and other sorts of fun stuffs ;)</em></li>
+                <li>How many times your heart has beaten around <em>and all other sorts of fun stuffs ;)</em></li>
             </ul>
             <p style="text-align: center; color: red; font-size: 18px;"><strong>So Stay Tuned Everyone! Bye Bye</strong></p>
         </div>
