--- a/index.html
+++ b/index.html
@@ -1,45 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Intelage Calculator</title>
-        <link rel="stylesheet" href="style.css" />
-    </head>
-    <body>
-        <h1>Intelage Calculator</h1>
-        <p class="comingsoon">Coming Soon!</p>
-        <p class="description">I'm currently learning HTML and yet to start learning JavaScript. So once I've learned enough of JS to complete this, I'll complete this project! <em>pinky promise ;)</em></p>
-        <div class="proinfo">
-            <strong><em>What does the name mean?</em></strong><br />
-            <br />
-            The part <strong>Intel</strong> came from the word <em>Intelligent</em> and well the part <strong>age</strong> means <em>Age</em>. Yeah I know it sounds dumb! Or maybe it <strong>doesn't!?</strong> And I guess you probably know
-            what a <strong>Calculator</strong> means.<br />
-            <br />
-            <strong><em>So a calculator! What's New about it?</em></strong><br />
-            <br />
-            Well it's not your normal calculator that you daily use for doing maths and calculations. It's a <strong>Special</strong> Calculator for calculating stuffs related to your <em>age</em> as the name suggests.<br />
-            <br />
-            <strong>It'll be able to :</strong>
-            <ul>
-                <li>Tell your exact age based on your input</li>
-                <li>Your next birthdate with countdowns</li>
-                <li>How many hours you've slept</li>
-                <li>How many hours you'll probably sleep</li>
-                <li>How many breaths you've taken around</li>
-                <li>How much foods you've taken around</li>
-                <li>How many times your heart has beaten around <em>and all other sorts of fun stuffs ;)</em></li>
-            </ul>
-            <p style="text-align: center; color: red; font-size: 18px;"><strong>So Stay Tuned Everyone! Bye Bye</strong></p>
-        </div>
-        <footer>
-            <h3>:: Contacts ::</h3>
-            <br />
-            <a href="https://www.facebook.com/username2249"> <img class="contacts" src="https://img.icons8.com/doodle/48/000000/facebook-new.png" /></a>
-
-            <a href="mailto: zakariyaabbas2015@gmail.com"> <img class="contacts" src="https://img.icons8.com/doodle/48/000000/gmail-new.png" /></a>
-
-            <p class="credit">Developed with ♥️ by Xeunyx</p>
-        </footer>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Intelage Calculator</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="bodydiv">
+      <h1>Intelage Calculator</h1>
+      <p class="comingsoon">Coming Soon!</p>
+      <p class="description">
+        I'm currently learning HTML and yet to start learning JavaScript. So
+        once I've learned enough of JS to complete this, I'll complete this
+        project! <em>pinky promise ;)</em>
+      </p>
+      <div class="proinfo">
+        🔶 <strong><em>What does the name mean?</em></strong
+        ><br />
+        <br />
+        The part <strong>Intel</strong> came from the word
+        <em>Intelligent</em> and well the part <strong>age</strong> means
+        <em>Age</em>. Yeah I know it sounds dumb! Or maybe it
+        <strong>doesn't!?</strong> And I guess you probably already know what
+        <strong>Calculator</strong> means.<br />
+        <br />
+        🔶 <strong><em>So a calculator! What's New about it?</em></strong
+        ><br />
+        <br />
+        Well it's not your normal calculator that you daily use for doing maths
+        and calculations. It's a <strong>Special Calculator</strong> for
+        calculating stuffs related to your <em>age</em> as the name suggests.<br />
+        <br />
+        <strong>✴️ It'll be able to :</strong>
+        <ul>
+          <li>Tell your exact age based on your input</li>
+          <li>Your next birthdate with countdowns</li>
+          <li>How many hours you've slept</li>
+          <li>How many hours you'll probably sleep</li>
+          <li>How many breaths you've taken around</li>
+          <li>How much foods you've taken around</li>
+          <li>
+            How many times your heart has beaten around and all other sorts of
+            fun stuffs
+          </li>
+        </ul>
+        <p
+          style="text-align: center; color: pink; font-weight: bold; font-size: 18px;"
+        >
+          Till Then Stay Tuned!
+        </p>
+        <a href="https://gist.github.com/Xeunyx-Cypher">
+          <p style="color: red; font-weight: bold; font-size: 15px;">
+            ➡️ Click here to see my other projects!
+          </p>
+        </a>
+      </div>
+      <footer>
+        <h3>:: Contacts ::</h3>
+        <br />
+        <a href="https://www.facebook.com/username2249">
+          <img
+            class="contacts"
+            src="https://img.icons8.com/doodle/48/000000/facebook-new.png"
+        /></a>
+        <a href="mailto: zakariyaabbas2015@gmail.com">
+          <img
+            class="contacts"
+            src="https://img.icons8.com/doodle/48/000000/gmail-new.png"
+        /></a>
+        <p class="credit">Developed with ♥️ by Xeunyx</p>
+      </footer>
+    </div>
+  </body>
 </html>
